# sqlsure

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  check.py  model.example.json  pyproject.toml  requirements.txt  server.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
benchmarks/: audit_bird.py  audit_spider.py  audit_tpcds.py  benchmark.py  experiment_gate_vs_judge.py
docs/: ARCHITECTURE.md  EVIDENCE.md  FOR-DUMMIES.md  INTEGRATIONS.md  MCP.md  METRICS.md  TEST-REPORTS.md
docs/reports/: benchmark.md  bird-audit.md  bird-train-audit.md  fivetran-hubspot.md  gate-vs-judge-experiment.md  jaffle-shop.md  mattermost.md  spider-audit.md  tpcds-audit.md
integrations/: eval_metric.py  mdl_loader.py  omop_loader.py  osi_loader.py  semantic_gate.py
skills/sql-semantic-check/: SKILL.md
sqlsure/: __init__.py  checker.py  cli.py  dbt_loader.py  introspect.py  mcp_server.py  model.py  rules.py  scan.py
tests/: run_tests.py
